--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ psycopg2-binary = "^2.9.9"
 email-validator = "^2.2.0"
 flask = "^3.0.3"
 openpyxl = "^3.1.5"
+marshmallow = "^3.22.0"
 
 
 [build-system]
